# LangChain-Workflows

./: .gitignore  README.md  environment.yml  pyproject.toml
langchain_env/: configs.py  file_operations.py  input_processing.py  main.py  models.py  output_generation.py  run_deepeval.py
tests/: .deepeval  .deepeval-cache.json  test_file_operations.py  test_input_processing.py  test_output_generation.py
